--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="announcement">
-        <center><p class="refresh site"><a href="https://gega22.github.io/minecraft.net-support">added new support page with live chat! (click here)</a></p></center>
+        <center><p class="refresh site"><a href=""">you can download MC-pe by clicking version that version you choose</a></p></center>
     </div>
 
         <div class="site-identity">
@@ -35,11 +35,10 @@
                 </ul>
             </nav>
         </header>
-        <center>  
-            <button class="btn1"><a href="https://gega22.github.io/minecraft.net-updates-nether-update/">nether update</a></button>
-            <button class="btn2"><a href="https://gega22.github.io/minecraft.net-updates-wild-update/">wild update</a></button>
-            <button class="btn3"><a href="https://gega22.github.io/minecraft.net-updates-aquatic-update/">ocean update</a></button>
-            <button class="btn4"><a href="https://gega22.github.io/minecraft.net-updates-trails-tales/">trails tales update</a></button>        </center> 
+            <center><button class="btn1"><a href="https://gega22.github.io/minecraft.net-updates-aquatic-update/">1.13</a></button></center>
+            <center><button class="btn2"><a href="https://gega22.github.io/minecraft.net-updates-nether-update/">1.16</a></button></center>
+            <center><button class="btn3"><a href="https://gega22.github.io/minecraft.net-updates-wild-update/">1.19</a></button></center>
+            <center><button class="btn4"><a href="https://gega22.github.io/minecraft.net-updates-trails-tales/">1.20</a></button></center>
 
 <script src="script.js"></script>
    <script src="pre.js" charset="utf-8"></script>
