--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
         <div class="site-identity">
-            <center><h1><a href="https://www.minecraft.net/en-us">minecraft.net(original)</a></h1></center>
+            <center><h1><a href="https://www.minecraft.net/en-us">minecraft.net(official WB link)</a></h1></center>
         </div>
         <nav class="site-navigation">
         <ul class="nav">
