--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="announcement">
-        <center><p class="refresh site"><a href=""">you can download MC-pe by clicking version that version you choose</a></p></center>
+        <center><p class="refresh site"><a href=""">mobile version of this website, for better experience please use desktop or laptop</a></p></center>
     </div>
 
         <div class="site-identity">
@@ -20,25 +20,20 @@
         <nav class="site-navigation">
         <ul class="nav">
             <center>
-                <li><a href="https://gega22.github.io/minecraft.net-support/">support(new)</a></li>
+                <li><a href="https://gega22.github.io/minecraft.net-support/">support center</a></li>
                 <li><a href="https://gega22.github.io/minecraft.net-resourcepacks-mobile/">resource packs</a></li>
-                <li><a href="https://gega22.github.io/minecraft.net-minecraftdungeons/">minecraft dungeons</a></li>
             </center>
-
-
-<div id="popup" class="popup">
-    <div class="popup-content">
-        <span class="close" onclick="closePopup()">&times;</span>
-        <p class="nuhas">
-            added new #support page with working live chat! removed turn off buttons feature (#resourcepacks page will get updated soon)
-</div></li>
-                </ul>
-            </nav>
-        </header>
             <center><button class="btn1"><a href="https://gega22.github.io/minecraft.net-updates-aquatic-update/">1.13</a></button></center>
             <center><button class="btn2"><a href="https://gega22.github.io/minecraft.net-updates-nether-update/">1.16</a></button></center>
             <center><button class="btn3"><a href="https://gega22.github.io/minecraft.net-updates-wild-update/">1.19</a></button></center>
             <center><button class="btn4"><a href="https://gega22.github.io/minecraft.net-updates-trails-tales/">1.20</a></button></center>
+            <div class="carousel-container">
+                <div class="carousel">
+                    <a href="https://gega22.github.io/minecraft.net-minecraftdungeons/"><img src="image1.jpg" alt="Image 1"></a>
+                    <a href="https://gega22.github.io/minecraft.net-minecraftdungeons/"><img src="image2.png" alt="Image 2"></a>
+                    <a href="https://gega22.github.io/minecraft.net-minecraftdungeons/"><img src="image3.jpg" alt="Image 3"></a>
+                    <script src="carousel.js"></script>
+                </div>
 
 <script src="script.js"></script>
    <script src="pre.js" charset="utf-8"></script>
