--- a/index.html
+++ b/index.html
@@ -37,5 +37,8 @@
 
 <script src="script.js"></script>
    <script src="pre.js" charset="utf-8"></script>
+   <audio id="audio" src="Aria math sped up reverb.mp3" preload="auto"></audio>
+
+   <script src="autoplaysong.js"></script>
 </body>
 </html>
